--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -29,11 +29,10 @@ This vignette shows you how to install, launch, and use the main Shiny app—`ru
 You can install **fluxtools** from CRAN (once it’s been accepted), or directly from GitHub:
 
 ```r
-# From CRAN
-install.packages("fluxtools")
+# Install from Github:
+<!-- library(devtools)  -->
+<!-- devtools::install_github("kesondrakey/fluxtools") -->
 
-# Or the development version
-# remotes::install_github("kesondrakey/fluxtools")
 ```
 
 # Launching the Shiny App
@@ -44,6 +43,7 @@ library(fluxtools)
 
 # Add the UTC offset for your flux tower site (e.g., UTC-5 for EST)
 run_flux_qaqc(-5)
+
 ```
 
 
