--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,17 +1,3 @@
-
-
-@misc{Fluxtools,
-  author       = {Key, Kesondra},
-  title        = {{fluxtools}: Interactive QA/QC for AmeriFlux Data},
-  year         = {2025},
-  month        = jun,
-  journal      = {GitHub repository},
-  url          = {https://github.com/kesondrakey/fluxtools},
-  note         = {R package version 0.2.0, GPL-3.0 license},
-  urldate      = {2025-06-18}
-}
-
-
 @book{Burba2021,
   author    = {Burba, George},
   title     = {Eddy Covariance Method - for Scientific, Regulatory, and Commercial Applications},
@@ -26,8 +12,7 @@
                to field deployment to post-processing analysis.}
 }
 
-
-@misc{ChatGPT,
+@online{ChatGPT,
   author   = {{OpenAI}},
   title    = {Introducing OpenAI o3 and o4-mini},
   year     = {2025},
@@ -36,61 +21,114 @@
   note     = {Accessed 18 June 2025}
 }
 
-
-
-@misc{US-VT1,
-  author      = {{AmeriFlux}},
-	title = {Site {Info} for {US}-{VT1}},
-	url = {https://ameriflux.lbl.gov/sites/siteinfo/US-VT1},
-	language = {en-US},
-  year     = {2025},
-	urldate = {2025-06-18},
-	}
-
-@misc{US-VT2,
-  author      = {{AmeriFlux}},
-	title = {Site {Info} for {US}-{VT2}},
-	url = {https://ameriflux.lbl.gov/sites/siteinfo/US-VT2},
-	language = {en-US},
-  year     = {2025},
-	urldate = {2025-06-18},
+@online{ameriflux,
+  author    = {{AmeriFlux Management Project}},
+  title     = {AmeriFlux Data Portal},
+  year      = {2025},
+  url       = {https://ameriflux.lbl.gov/},
+  urldate   = {2025-06-18},
+  note      = {Funding for the AmeriFlux data portal was provided by the U.S. Department of Energy Office of Science}
 }
 
-@misc{dplyr,
-	title = {dplyr: {A} {Grammar} of {Data} {Manipulation}},
-	copyright = {MIT + file LICENSE},
-	shorttitle = {dplyr},
-	url = {https://cran.r-project.org/web/packages/dplyr/index.html},
-	abstract = {A fast, consistent tool for working with data frame like objects, both in memory and out of memory.},
-	urldate = {2025-06-18},
-	author = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill and Vaughan, Davis and Software, Posit and PBC},
-	month = nov,
-	year = {2023},
-	keywords = {Databases, ModelDeployment},
+@software{Fluxtools,
+  author       = {Key, Kesondra},
+  title        = {Fluxtools: Interactive QA/QC for AmeriFlux Data},
+  version      = {0.2.0},
+  copyright =    {GPL-3 + file LICENSE},
+  year         = {2025},
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.15626645},
+  url          = {https://doi.org/10.5281/zenodo.15626645},
+  license      = {GPL-3.0},
+  note      = {Metadata released under CC BY 4.0}
 }
+
+@Dataset{VT1,
+  author       = {Key, Kesondra and Novick, Kim},
+  title        = {AmeriFlux BASE US-VT1 Vermillion Tributary Paired Cropland – Site 1 (Corn/Soy; No Cover Crops)},
+  publisher    = {AmeriFlux Network, Lawrence Berkeley National Laboratory},
+  year         = {2025},
+  doi          = {10.17190/AMF/2567994},
+  url          = {https://ameriflux.lbl.gov/doi/AmeriFlux/US-VT1/},
+  version      = {1–5 (BASE, CC-BY-4.0)},
+  note         = {Funding for the AmeriFlux data portal was provided by the U.S. Department of Energy Office of Science}
+}
+
+@Dataset{VT2,
+  author       = {Key, Kesondra and Novick, Kim},
+  title        = {AmeriFlux BASE US-VT2 Vermillion Tributary Paired Cropland – Site 2 (Corn/Soy; Cover Crops)},
+  publisher    = {AmeriFlux Network, Lawrence Berkeley National Laboratory},
+  year         = {2025},
+  doi          = {10.17190/AMF/2567995},
+  url          = {https://ameriflux.lbl.gov/doi/AmeriFlux/US-VT2/},
+  version      = {1–5 (BASE, CC-BY-4.0)},
+  note         = {Funding for the AmeriFlux data portal was provided by the U.S. Department of Energy Office of Science}
+}
+
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2025},
+    note = {R version 4.5.0},
+    url = {https://www.R-project.org/},
+  }
+
+
+
+@software{EddyPro,
+  author       = {{LI-COR Biosciences}},
+  title        = {{EddyCovariance Processing Software (EddyPro)}},
+  version      = {7.0.9},
+  year         = {2021},
+  url          = {https://www.licor.com/env/products/eddy-covariance/eddypro}
+}
+
+@Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author    = {Wickham, Hadley and François, Romain and Henry, Lionel and Müller, Kirill and Vaughan, Davis},
+    year = {2023},
+    copyright = {MIT + file LICENSE},
+    url = {https://CRAN.R-project.org/package=dplyr},
+    note = {R package version 1.1.4},
+    doi = {10.32614/CRAN.package.dplyr},
+  }
 
 @misc{Plotly,
-	title = {plotly: {Create} {Interactive} {Web} {Graphics} via 'plotly.js'},
+	title = {plotly: Create Interactive Web Graphics via 'plotly.js'},
 	copyright = {MIT + file LICENSE},
-	shorttitle = {plotly},
 	url = {https://cran.r-project.org/web/packages/plotly/index.html},
-	abstract = {Create interactive web graphics from 'ggplot2' graphs and/or a custom interface to the (MIT-licensed) JavaScript library 'plotly.js' inspired by the grammar of graphics.},
-	urldate = {2025-06-18},
 	author = {Sievert, Carson and Parmer, Chris and Hocking, Toby and Chamberlain, Scott and Ram, Karthik and Corvellec, Marianne and Despouy, Pedro and Brüggemann, Salim and Inc, Plotly Technologies},
-	month = jan,
 	year = {2024},
-	keywords = {DynamicVisualizations, WebTechnologies},
+	doi = {10.32614/CRAN.package.plotly},
+        note = {R package version 4.10.4},
 }
 
-@misc{Shiny,
-	title = {shiny: {Web} {Application} {Framework} for {R}},
-	copyright = {GPL-3 {\textbar} file LICENSE},
-	shorttitle = {shiny},
-	url = {https://cran.r-project.org/web/packages/shiny/index.html},
-	abstract = {Makes it incredibly easy to build interactive web applications with R. Automatic "reactive" binding between inputs and outputs and extensive prebuilt widgets make it possible to build beautiful, responsive, and powerful applications with minimal effort.},
-	urldate = {2025-06-18},
-	author = {Chang, Winston and Cheng, Joe and Allaire, J. J. and Sievert, Carson and Schloerke, Barret and Xie, Yihui and Allen, Jeff and McPherson, Jonathan and Dipert, Alan and Borges, Barbara and Software, Posit and PBC and library), jQuery Foundation (jQuery library {and} jQuery UI and inst/www/shared/jquery-AUTHORS.txt), jQuery contributors (jQuery library; authors listed in and inst/www/shared/jqueryui/AUTHORS.txt), jQuery UI contributors (jQuery UI library; authors listed in and library), Mark Otto (Bootstrap and library), Jacob Thornton (Bootstrap and library), Bootstrap contributors (Bootstrap and Twitter and library), Inc (Bootstrap and plugin), Prem Nawaz Khan (Bootstrap accessibility and plugin), Victor Tsaran (Bootstrap accessibility and plugin), Dennis Lembree (Bootstrap accessibility and plugin), Srinivasu Chakravarthula (Bootstrap accessibility and plugin), Cathy O'Connor (Bootstrap accessibility and PayPal and plugin), Inc (Bootstrap accessibility and library), Stefan Petre (Bootstrap-datepicker and library), Andrew Rowls (Bootstrap-datepicker and library), Brian Reavis (selectize js and library), Salmen Bejaoui (selectize-plugin-a11y and library), Denis Ineshin (ion rangeSlider and library), Sami Samhuri (Javascript strftime and library), SpryMedia Limited (DataTables and library), John Fraser (showdown js and library), John Gruber (showdown js and library), Ivan Sagalaev (highlight js and R), R. Core Team (tar implementation from},
-	month = dec,
-	year = {2024},
-	keywords = {WebTechnologies},
+@Manual{Shiny,
+    title = {shiny: Web Application Framework for R},
+    copyright = {GPL-3 + file LICENSE},
+    author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+    year = {2024},
+    note = {R package version 1.10.0},
+    url = {https://CRAN.R-project.org/package=shiny},
+    doi = {10.32614/CRAN.package.shiny},
+  }
+
+@Manual{Reddyproc,
+    title = {REddyProc: Post Processing of (Half-)Hourly Eddy-Covariance Measurements},
+    author = {Thomas Wutzler and Markus Reichstein and Antje Maria Moffat and Mirco Migliavacca},
+    year = {2024},
+    note = {R package version 1.3.3},
+    url = {https://CRAN.R-project.org/package=REddyProc},
+    doi = {10.32614/CRAN.package.REddyProc},
+  }
+
+
+@misc{PyFluxPro,
+	title = {PyFluxPro},
+        copyright = {GPL-3 + file LICENSE},
+	url = {https://github.com/OzFlux/PyFluxPro},
+	author = {Isaac, Peter},
+	year = {2021}
 }
