--- a/paper/pdf/paper_pdf.Rmd
+++ b/paper/pdf/paper_pdf.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Fluxtools: interactive Shiny tool for QA/QC and code generation of Ameriflux eddy covariance data"
+title: "fluxtools: interactive Shiny tool for QA/QC and code generation of Ameriflux eddy-covariance data"
 tags:
   - R
   - eddy covariance
@@ -17,32 +17,34 @@ affiliations:
     ror: 02k40bc56 
 repository: https://github.com/kesondrakey/fluxtools
 archive:    https://doi.org/10.5281/zenodo.15597159
-license: GPL-3.0
+license: GPL-3.0-only          # OSI-approved license of the *code*
 bibliography: paper.bib
 link-citations: true
 output:
-  md_document:
-    variant: markdown
+  pdf_document:
+    latex_engine: xelatex
+    highlight: tango
+    pandoc_args:
+      - "--variable=geometry:margin=1in"
 ---
 
 # Summary
 Eddy covariance data processing requires extensive quality control (QA/QC) to identify and remove implausible or erroneous half-hourly flux data before submission to public data repositories such as [Ameriflux](https://ameriflux.lbl.gov/) [@ameriflux]. 
-[*Fluxtools*](https://github.com/kesondrakey/fluxtools) [@Fluxtools] is an R [≥ 4.5.0; @R] *Shiny* [@Shiny] application built with *Plotly* [@Plotly] and *dplyr* [@dplyr] packages designed to streamline this workflow by providing interactive visualization, year-based filtering, and on-the-fly R code generation for specified data removal. Users can visually flag anomalous data points (i.e., periods of sensor failure, physically implausible data), accumulate multiple cleaning steps, inspect R² values before and after data cleaning via base R’s  [*lm()* ](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) function, and export a zipped folder containing a cleaned .csv file and a full R script that records every decision. *Fluxtools* significantly accelerates the QA/QC workflow, ensuring transparent, reproducible, and shareable data cleaning suitable for final dataset preparation and repository submission. 
-
+[*Fluxtools*](https://github.com/kesondrakey/fluxtools) [@Fluxtools] is an R [\geq 4.5.0; @R] *Shiny* [@Shiny] application built with *Plotly* [@Plotly] and *dplyr* [@dplyr] packages designed to streamline this workflow by providing interactive visualization, year-based filtering, and on-the-fly R code generation for specified data removal. Users can visually flag anomalous data points (i.e., periods of sensor failure, physically implausible data), accumulate multiple cleaning steps, inspect R² values before and after data cleaning via base R’s  [*lm()* ](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) function, and export a zipped folder containing a cleaned .csv file and a full R script that records every decision. *Fluxtools* significantly accelerates the QA/QC workflow, ensuring transparent, reproducible, and shareable data cleaning suitable for final dataset preparation and repository submission. 
 
 
 ![*Fluxtools* hex logo \label{fig:1}](Fig1.png){ width=30% .center }
 
 ## Key features: 
-- **Interactive Plotly Scatterplots**: Plot any numeric or time variable; hover mouse over data points to see timestamps and values; export plots as .png directly from the app 
+**Interactive Plotly Scatterplots**: Plot any numeric or time variable; hover mouse over data points to see timestamps and values; export plots as .png directly from the app 
 
-- **Flexible point selection**: Select data points via box, lasso, or by standard-deviation (σ) cutoffs. *See Fig 2* for interface and data selection example 
+**Flexible point selection**: Select data points via box, lasso, or by standard-deviation (\sigma) cutoffs. *See Fig 2* for interface and data selection example 
 
-- **On-the-fly R code generation**: The *Preview* pane shows selected timestamps and values; ready-to-copy R code using *dplyr’s case_when(… ~ NA)* snippets generate in the *current* code box automatically; *add current selection* adds code to the *accumulated* code box for easy and continuous data selection 
+**On-the-fly R code generation**: The *Preview* pane shows selected timestamps and values; ready-to-copy R code using *dplyr’s case_when(… ~ NA)* snippets generate in the *current* code box automatically; *add current selection* adds code to the *accumulated* code box for easy and continuous data selection 
 
-- **Before/after R² diagnostics**: When numeric variables are compared against each other, a linear regression generates a R² value. Automatically computes post-removal R² value where selected data points are dropped to see step comparisons. *See Fig 3* for an example of the *Fluxtools* interfacing using the ±σ outliers selection tool. The top (red) R² is for all data points and the bottom R² (orange) is when selected points are dropped from the linear regression model 
+**Before/after R² diagnostics**: When numeric variables are compared against each other, a linear regression generates a R² value. Automatically computes post-removal R² value where selected data points are dropped to see step comparisons. *See Fig 3* for an example of the *Fluxtools* interfacing using the ±σ outliers selection tool. The top (red) R² is for all data points and the bottom R² (orange) is when selected points are dropped from the linear regression model 
 
-- **Export a cleaned .csv file and R script**: *Apply removals* in-app (converting data points into *NA*s for selected timestamps) and download both a cleaned .csv file and a comprehensive R script documenting each data removal step 
+**Export a cleaned .csv file and R script**: *Apply removals* in-app (converting data points into *NA*s for selected timestamps) and download both a cleaned .csv file and a comprehensive R script documenting each data removal step 
 
 ![Example of the *Fluxtools* interface and data selection](Fig2.png){#fig:2 width=100%}
 ![Example of R² diagnostics using the ±σ outliers cutoffs and selection](Fig3.png){#fig:3 width=100%}
@@ -55,11 +57,10 @@ In practice, data managers resort to custom scripts, extensive manual visualizat
 
 *Fluxtools* streamlines and clarifies the QA/QC workflow by combining interactivity with code-based reproducibility. It promotes transparent documentation of decisions, reduces manual effort, and accelerates the preparation of flux data for repository uploads such as individual site submissions to Ameriflux. Ultimately, *Fluxtools* lowers the barriers to robust and reproducible QA/QC workflows, enabling researchers to devote less time to manual anomaly detection and more time to scientific analysis.
 
-
 # Code Example
 *Fluxtools can be installed from [Github](https://github.com/kesondrakey/fluxtools).*
 
-```{r How-to, eval=FALSE}
+```{r How-to, eval=FALSE, tidy=TRUE}
 library(fluxtools)
 
 #Set your site’s UTC offset (e.g., –5 for Eastern Standard Time)
