--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -10,11 +10,11 @@ date: 18 June 2025          # %e %B %Y
 authors:
   - name: Kesondra Key
     orcid: 0000-0001-6382-913X
-    affiliation: 1
+    affiliation: "1"
 affiliations:
   - index: 1
     name: "Paul H. O'Neill School of Public and Environmental Affairs, Indiana University, Bloomington, Indiana, United States"
-    ror: 02k40bc56 
+    ror: "02k40bc56"
 repository: https://github.com/kesondrakey/fluxtools
 archive:    https://doi.org/10.5281/zenodo.15597159
 license: GPL-3.0
