--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -30,7 +30,7 @@ output:
 
 # Summary
 Eddy covariance data processing requires extensive quality control (QA/QC) to identify and remove implausible or erroneous half-hourly flux data before submission to public data repositories such as [Ameriflux](https://ameriflux.lbl.gov/) [@ameriflux]. 
-[*Fluxtools*](https://github.com/kesondrakey/fluxtools) [@Fluxtools] is an R [>= 4.5.0; @R] *Shiny* [@Shiny] application built with *Plotly* [@Plotly] and *dplyr* [@dplyr] packages designed to streamline this workflow by providing interactive visualization, year-based filtering, and on-the-fly R code generation for specified data removal. Users can visually flag anomalous data points (i.e., periods of sensor failure, physically implausible data), accumulate multiple cleaning steps, inspect R² values before and after data cleaning via base R’s  [*lm()* ](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) function, and export a zipped folder containing a cleaned .csv file and a full R script that records every decision. *Fluxtools* significantly accelerates the QA/QC workflow, ensuring transparent, reproducible, and shareable data cleaning suitable for final dataset preparation and repository submission. 
+[*Fluxtools*](https://github.com/kesondrakey/fluxtools) [@Fluxtools] is an R (≥ 4.5.0; @R) *Shiny* [@Shiny] application built with *Plotly* [@Plotly] and *dplyr* [@dplyr] packages designed to streamline this workflow by providing interactive visualization, year-based filtering, and on-the-fly R code generation for specified data removal. Users can visually flag anomalous data points (i.e., periods of sensor failure, physically implausible data), accumulate multiple cleaning steps, inspect R² values before and after data cleaning via base R’s  [*lm()* ](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) function, and export a zipped folder containing a cleaned .csv file and a full R script that records every decision. *Fluxtools* significantly accelerates the QA/QC workflow, ensuring transparent, reproducible, and shareable data cleaning suitable for final dataset preparation and repository submission. 
 
 
 
@@ -76,6 +76,6 @@ I am grateful to Dr. Kim Novick (Indiana University), Housen Chu (Ameriflux), an
 
 This work was supported by NSF's Division of Environmental Biology (DEB) Dynamics of Socio-Environmental Systems Program (Award 22-06086) and NASA’s Carbon Monitoring System (Award 80NSSC23K1254). 
 
-Partial development of the fluxtools application logic, debugging assistance, and initial code drafting were supported by ChatGPT [OpenAI’s GPT-4-mini-high; -@ChatGPT. All final code and revisions were authored and approved by the human author.
+Partial development of the fluxtools application logic, debugging assistance, and initial code drafting were supported by OpenAI’s *GPT-4-mini-high* large language model [@ChatGPT]. All final code and revisions were authored and approved by the human author.
 
 # References 
