--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -71,12 +71,12 @@ fluxtools::run_flux_qaqc(-5)
 ```
 
 # Acknowledgments 
-Fluxtools was developed in my role as Co-Principal Investigator for the AmeriFlux [US-VT1](https://ameriflux.lbl.gov/sites/siteinfo/US-VT1) [@VT1] and [US-VT2](https://ameriflux.lbl.gov/sites/siteinfo/US-VT2) [@VT2] sites to streamline our QA/QC pipeline. I thank AmeriFlux for maintaining clear, up-to-date data‐formatting specifications (see [AmeriFlux Data Variables](https://ameriflux.lbl.gov/wp-content/uploads/2015/10/AmeriFlux_DataVariables.pdf)) and I acknowlege the broader R and Shiny communities for their efforts in advancing interactive data‐visualization tools.  
+Fluxtools was an independent project developed in my role as Co-Principal Investigator for the AmeriFlux [US-VT1](https://ameriflux.lbl.gov/sites/siteinfo/US-VT1) [@VT1] and [US-VT2](https://ameriflux.lbl.gov/sites/siteinfo/US-VT2) [@VT2] sites to streamline our QA/QC pipeline. I thank AmeriFlux for maintaining clear, up-to-date data‐formatting specifications (see [AmeriFlux Data Variables](https://ameriflux.lbl.gov/wp-content/uploads/2015/10/AmeriFlux_DataVariables.pdf)) and I acknowledge the broader R and Shiny communities for their efforts in advancing interactive data‐visualization tools.  
 
 I am grateful to Dr. Kim Novick (Indiana University), Housen Chu (AmeriFlux), and Benju Baniya (Texas A&M University) for their invaluable expertise in assisting with the AmeriFlux data processing workflow. Without their support, this data pipeline would not have been possible. I also thank Dr. Mallory Barnes, Dr. Daniel Beverly, and Dr. Xian Wang (all at Indiana University) for their support during development and testing. Special thanks goes to George Burba (LI-COR Biosciences) for his encouragement and for insightful discussions that have helped shape the future of *Fluxtools*.
 
 This work was supported by NSF's Division of Environmental Biology (DEB) Dynamics of Socio-Environmental Systems Program (Award 22-06086) and NASA’s Carbon Monitoring System (Award 80NSSC23K1254). 
 
-Partial development of the fluxtools application logic, debugging assistance, and initial code drafting were supported by OpenAI’s *GPT-4-mini-high* large language model [@ChatGPT]. All final code and revisions were authored and approved by the human author.
+Partial development of the Fluxtools application logic, debugging assistance, and initial code drafting were supported by OpenAI’s *GPT-4-mini-high* large language model [@ChatGPT]. All final code and revisions were authored and approved by the human author.
 
 # References 
