--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -51,7 +51,8 @@ Eddy covariance data processing requires extensive quality control (QA/QC) to id
 
 - **On-the-fly R code generation**: The *Preview* pane shows selected timestamps and values; ready-to-copy R code using *dplyr’s case_when(… ~ NA)* snippets generate in the *current* code box automatically; *add current selection* adds code to the *accumulated* code box for easy and continuous data selection 
 
-- **Before/after R² diagnostics**: When numeric variables are selected for comparison, *Fluxtools* fits a linear regression model and reports its R² value. When points are selected, the R² value is re-computed assuming selected values are dropped to allow for before and after comparison. *Fig 3* shows this process in *Fluxtools* using the *±σ outliers selection tool:* The top (red) R² uses all data, while the bottom R² (orange) omits selected points from the linear regression.
+- **Before/after R² diagnostics**: For any numeric variable comparison, *Fluxtools* fits a linear regression model and reports its R² value. 
+Selecting points re-computes R² as if those points were removed, allowing for easy comparison. *Fig 3* shows this process in *Fluxtools* using the *±σ outliers selection tool:* The top (red) R² uses all data, while the bottom R² (orange) omits selected points from the linear regression.
 
 ![Example of R² diagnostics using the ±σ outliers cutoffs and selection\label{fig:3}](Fig3.png){#fig:3 width=100%}
 
