installation directions added

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -73,13 +73,13 @@ In practice, data managers resort to custom scripts, extensive manual visualizat
 
 ## Installation
 ```{r Installation, eval=FALSE}
-# Install from CRAN 
-install.packages("fluxtools")
+# Option 1.) Install from CRAN (Fluxtools R Package submission pending)
+#install.packages("fluxtools")
 
-# Install from GitHub
-library(devtools) 
-devtools::install_github("kesondrakey/fluxtools")
-
+# Option 2.) Install most recent version from GitHub
+# Requires remotes ≥ 2.4.0
+library(remotes)
+remotes::install_git("https://github.com/kesondrakey/fluxtools.git")
 ```
 
 ## Call the Fluxtools App
