minor fix for cit

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -32,7 +32,7 @@
 
 @software{Fluxtools,
   author       = {Key, Kesondra},
-  title        = {Fluxtools: Interactive QA/QC for AmeriFlux Data},
+  title        = {Fluxtools: Interactive QA/QC for Eddy Covariance Data},
   version      = {0.3.0},
   copyright =    {GPL-3 + file LICENSE},
   year         = {2025},
