fixed issue with eddypro descr

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -132,3 +132,15 @@
 	author = {Isaac, Peter},
 	year = {2021}
 }
+
+
+@software{Loggernet,
+  author = {{Campbell Scientific, Inc.}},
+  title = {LoggerNet: Datalogger Support Software},
+  url = {https://www.campbellsci.com/loggernet},
+  version = {4.9},
+  year = {2025}
+}
+
+
+
